--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
     
     <h1>Biography</h1>
 
-    <p> I am a Data Scientist working with analytics, insights and measurement (AIM) team at Google Inc. Prior to that, I earned my PhD in Statistics in August 2023 from the <a href="https://www.stat.washington.edu/">Department of Statistics</a> at the University of Washington. I am broadly interested in Bayesian Machine Learning and Statistical Modelling Techniques. During my PhD, I worked with <a href="https://www.stat.washington.edu/people/raftery/">Prof. Adrian Raftery</a> and <a href="https://sites.stat.washington.edu/people/abelrod/Home.html">Prof. Abel Rodriguez</a> to develop Bayesian methods for sparse models. I spent the summer of 2021 as a Biostatistics research intern at <a href="https://www.merck.com/">Merck Research Laboratories</a> working with <a href="http://www.himelmallick.org/">Dr. Himel Mallick</a> on an integrated Bayesian framework for multiomics prediction and classification.</p>
+    <p> I am a Data Scientist working with analytics, insights and measurement (AIM) team at Google Inc. Prior to that, I earned my PhD in Statistics in August 2023 from the <a href="https://www.stat.washington.edu/">Department of Statistics</a> at the University of Washington. I am broadly interested in Bayesian Machine Learning and Statistical Modelling Techniques. During my PhD, I worked with <a href="https://www.stat.washington.edu/people/raftery/">Prof. Adrian Raftery</a> and <a href="https://sites.stat.washington.edu/people/abelrod/Home.html">Prof. Abel Rodriguez</a> to develop <a https://digital.lib.washington.edu/researchworks/bitstream/handle/1773/50930/Porwal_washington_0250E_26131.pdf?sequence=1&isAllowed=y"> Bayesian methods for variable selection</a>. I spent the summer of 2021 as a Biostatistics research intern at <a href="https://www.merck.com/">Merck Research Laboratories</a> working with <a href="http://www.himelmallick.org/">Dr. Himel Mallick</a> on an integrated Bayesian framework for multiomics prediction and classification.</p>
 <p>Before coming to UW, I worked as an analyst with North American Liability Strategies team in <a href="https://deutschebank.co.in/">Deutsche Bank</a>. At DB, I advised North American corporate clients on their liability strategies including liability management, capital structure analysis, ratings and pension advisory.</p>
 <p>I did my bachelors and masters in Mathematics and Scientific Computing from Indian Institute of Technology Kanpur in 2017 where I was fortunate to work with <a href="http://home.iitk.ac.in/~kundu/kundu.html">Prof. Debasis Kundu</a>, <a href="http://home.iitk.ac.in/~amitra/">Prof. Amit Mitra</a> and <a href="https://www.cse.iitk.ac.in/users/piyush/">Prof. Piyush Rai</a>.</p>
 <p>You can find my CV <a href="files/resources/Anupreet_Porwal.pdf">here</a>.</p>
@@ -661,7 +661,7 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">PhD in Statistics</p>
+              <p class="course">PhD in Statistics, 2023</p>
               <p class="institution">University of Washington Seattle</p>
             </div>
           </li>
