--- a/index.html
+++ b/index.html
@@ -1088,6 +1088,8 @@
 </div>
 
     </div>
+
+    <p> </p>You can find full list of publications <a href="https://scholar.google.co.in/citations?user=un4SzwsAAAAJ&amp;hl=en&amp;oi=ao"> here</a>.</p>
   </section>
 
   
